@@ -3,6 +3,9 @@ Version CVS HEAD (?)
   * packaging changes:
     - updated autotools build files to compile on OS X
       (conditional compilation of CoreMIDI and MidiShare drivers)
+  * support for the gig parameters for "release velocity response"
+    curves
+  * fine tuning of the EGADSR envelope
 
 Version 0.3.1 (24 May 2005)
 
